--- a/apps/you-lead-api/appsettings.json
+++ b/apps/you-lead-api/appsettings.json
@@ -1,8 +1,8 @@
 {
   "mssql": {
-    "server": "",
-    "database": "",
-    "user": "",
-    "password": ""
+    "server": "localhost",
+    "database": "YouLead",
+    "user": "sa",
+    "password": "Pass@word"
   }
 }
