--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,37 @@
-# Created by https://www.toptal.com/developers/gitignore/api/visualstudio,visualstudiocode,macos,rider
-# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudio,visualstudiocode,macos,rider
+# Created by https://www.toptal.com/developers/gitignore/api/visualstudio,angular,visualstudiocode,macos,rider
+# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudio,angular,visualstudiocode,macos,rider
+
+### Angular ###
+## Angular ##
+# compiled output
+dist/
+tmp/
+app/**/*.js
+app/**/*.js.map
+
+# dependencies
+node_modules/
+bower_components/
+
+# IDEs and editors
+.idea/
+
+# misc
+.sass-cache/
+connect.lock/
+coverage/
+libpeerconnection.log/
+npm-debug.log
+testem.log
+typings/
+.angular/
+
+# e2e
+e2e/*.js
+e2e/*.map
+
+# System Files
+.DS_Store/
 
 ### macOS ###
 # General
@@ -296,7 +328,6 @@ nCrunchTemp_*
 AutoTest.Net/
 
 # Web workbench (sass)
-.sass-cache/
 
 # Installshield output folder
 [Ee]xpress/
@@ -418,7 +449,6 @@ FakesAssemblies/
 
 # Node.js Tools for Visual Studio
 .ntvs_analysis.dat
-node_modules/
 
 # Visual Studio 6 build log
 *.plg
@@ -527,4 +557,4 @@ FodyWeavers.xsd
 ### VisualStudio Patch ###
 # Additional files built by Visual Studio
 
-# End of https://www.toptal.com/developers/gitignore/api/visualstudio,visualstudiocode,macos,rider
+# End of https://www.toptal.com/developers/gitignore/api/visualstudio,angular,visualstudiocode,macos,rider
